# arcgis-economic-distress-index

./: .bumpversion.cfg  LICENSE  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
arcgis/: arcgis-economic-distress-index.aprx
conda-recipe/: meta.yaml
docsrc/: conf.py  economic-distress-index-example-map.rst  economic-distress-index-script.rst  index.rst  setup.rst
docsrc/notebooks/: create-economic-distress-index-layer.ipynb
docsrc/slides/: create-economic-distress-index-layer.slides.html
notebooks/: create-economic-distress-index-layer.ipynb  notebook-template.ipynb
reports/slides/: create-economic-distress-index-layer.slides.html
scripts/: config.py  make_data.py
src/arcgis_economic_distress_index/: __init__.py
testing/: test_arcgis_economic_distress_index.py
