[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'arcgis-economic-distress-index'
version = "0.1.0"
authors = [
  { name="Esri ArcGIS Business Analyst Development Team"},
]
description = "Creating an economic distress index layer in ArcGIS using Census data with Python."
readme = "README.md"
requires-python = ">=3.6, <=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "arcgis>=2.0.1",
    "azure-storage-file",
    "boto3",
    "h3",
    "numpy>=1.7",
    "openpyxl",
    "pandas>=1.0.5",
    "pyarrow>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "arcgis>=2.0.1",
    "azure-storage-file",
    "boto3",
    "h3",
    "numpy>=1.7",
    "openpyxl",
    "pandas>=1.0.5",
    "pyarrow>=1.0.0",
    "bump2version",
    "jupyterlab",
    "nodejs",
    "pytest",
    "build"
]
docs = [
    "autodocsumm",
    "nbsphinx",
    "furo",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinxcontrib-youtube"
]
